@@ -14,7 +14,8 @@ SUBDIRS = \
 	menlow-lpia-ume \
 	netbook-lpia-moblin2-prealpha1 \
 	netbook-lpia-moblin2-alpha1 \
-	netbook-lpia-moblin2-alpha2
+	netbook-lpia-moblin2-alpha2 \
+	netbook-lpia-moblin2-alpha3
 
 debootstrap_scriptdir = ${pkgdatadir}/debootstrap-scripts
 debootstrap_script_DATA = \
