@@ -27,8 +27,9 @@ moblin-image-creator (0.49) gaston; urgency=low
   * Added new platform netbook-lpia-moblin2-alpha2.
   * Fixed rpm spec file format.
   * Added new platform netbook-lpia-moblin2-alpha3.
+  * Fixed values in Makefile.
 
- -- Mitsutaka Amano <mamano@miraclelinux.com>  Thu, 30 Apr 2009 09:24:40 +0900
+ -- Mitsutaka Amano <mamano@miraclelinux.com>  Thu, 30 Apr 2009 09:27:25 +0900
 
 moblin-image-creator (0.48) gaston; urgency=low
 
